--- a/package.json
+++ b/package.json
@@ -16,25 +16,33 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.17",
+    "firebase": "^10.7.2",
     "gatsby": "^5.13.2",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-source-supabase": "^2.1.2",
     "gatsby-transformer-sharp": "^5.13.1",
+    "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3"
+    "@types/react-helmet": "^6.1.11",
+    "typescript": "^5.3.3",
+    "typescript-plugin-css-modules": "^5.0.2"
   }
 }
