--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,6 +75,9 @@
 
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
+ 
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
+    
     // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied `any` type.. */
     // "strictNullChecks": true,                         /* When type checking, take into account `null` and `undefined`. */
     // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
