--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
@@ -44,12 +46,17 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "lucide-react": "^0.321.0",
+    "nanoid": "^5.0.6",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
