--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "eslint:fix": "eslint --fix --ext .ts,.tsx, ."
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -33,6 +34,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "firebase": "^10.7.2",
     "gatsby": "^5.13.2",
     "gatsby-plugin-dark-mode": "^1.1.2",
