--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.39.3",
+    "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
