--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-helmet": "^6.1.11",
+    "css-loader": "2",
     "typescript": "^5.3.3",
     "typescript-plugin-css-modules": "^5.0.2"
   }
