--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/analytics": "^1.2.2",
     "autoprefixer": "^10.4.17",
+    "babel-plugin-styled-components": "^2.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -47,6 +48,7 @@
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-source-supabase": "^2.1.2",
     "gatsby-transformer-sharp": "^5.13.1",
